# governed-rag-foundation

./: .env  .env.example  .gitignore  .gitmessage  AGENTS.md  AGENT_PLATFORM_TESTING.md  COMMIT_MESSAGE_PATTERN.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  WORKER_BOOTSTRAP_PATTERN.md  WORKER_SCAN_INITIALIZATION_FLOW.md  plan_tasks.md  pyproject.toml  stack.sh  task.md
apps/pipeline-worker/: Dockerfile  pyproject.toml  worker.py
apps/pipeline-worker/src/pipeline_worker/: __init__.py  app.py  config.py  s3_workspace.py
apps/rag-api/: Dockerfile  app.py  prompt_engine.py  pyproject.toml
apps/rag-api/src/rag_api/: app.py  config.py  llm_client.py  retrieval_client.py  routes.py
apps/rag-api/static/js/: ui.js
apps/rag-api/templates/: ui.html
apps/vector-ui/: pyproject.toml
apps/vector-ui/src/vector_ui/: weaviate_client.py
domains/agent_api/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
domains/agent_api/docs/: ARCHITECTURE.md
domains/agent_api/src/agent_api/: __init__.py  __main__.py  app.py  engine_factory.py  settings.py
domains/agent_cli/: pyproject.toml
domains/agent_cli/src/agent_cli/: __init__.py  app.py
domains/agent_platform/: README.md  pyproject.toml
domains/agent_platform/docs/: ARCHITECTURE.md
domains/agent_platform/src/: app.py
domains/agent_platform/src/agent_platform/: __init__.py  __main__.py
domains/agent_platform/src/cli/: agent_cli.py
domains/agent_platform/src/infrastructure/: local_checkpoint_store.py  local_command_runner.py  local_model_gateway.py  local_session_store.py
domains/agent_platform/src/startup/: __init__.py  config_extractor.py  contracts.py  service_factory.py
domains/ai_backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
domains/ai_backend/docs/: ARCHITECTURE.md
domains/ai_backend/src/ai_backend/: __init__.py  __main__.py  app.py  app_factory.py  application.py  config.py  handlers.py  http_types.py  request_context.py  request_normalization.py  responses.py  router.py  routes.py  service_factory.py  web_application_factory.py  wsgi.py
domains/ai_ui/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
domains/ai_ui/docs/: ARCHITECTURE.md
domains/ai_ui/src/ai_ui/: __init__.py  __main__.py  app.py  config.py  routes.py  settings.py
domains/app_agent_api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
domains/app_agent_api/docs/: ARCHITECTURE.md
domains/app_agent_api/src/agent_api/: __init__.py  app.py  routes.py
domains/app_agent_api/src/app_agent_api/: __main__.py  app.py  config.py  routes.py
domains/app_elasticsearch_poc/: .env.example  README.md  pyproject.toml
domains/app_elasticsearch_poc/docs/: ARCHITECTURE.md
domains/app_elasticsearch_poc/sample_data/: rag_chunks.json
domains/app_elasticsearch_poc/src/elasticsearch_poc/: __init__.py  app.py  common.py  create_index.py  seed_documents.py
domains/app_vector_ui/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
domains/app_vector_ui/docs/: ARCHITECTURE.md
domains/app_vector_ui/src/vector_ui/: __init__.py  __main__.py  app.py  config.py  weaviate_client.py
domains/worker_chunk_text/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
domains/worker_chunk_text/app/: Dockerfile
domains/worker_chunk_text/docs/: ARCHITECTURE.md  CONTRACT_INVENTORY.md  SIREN_WORKFLOW.md
domains/worker_chunk_text/src/: app.py
domains/worker_chunk_text/src/chunking/: params.py  params_contract.py  resolver.py  stage_contract.py  stage_splitter.py  stages.py  strategies.py
domains/worker_chunk_text/src/configs/: __init__.py  chunk_text_worker_config.py  chunking_scaffold.py  chunking_strategies.py  configs.py  constants.py
domains/worker_chunk_text/src/contracts/: __init__.py  chunk_manifest.py  chunk_process_output.py  chunk_text_worker_contracts.py  chunking_strategy.py  contracts.py  metadata.py  startup.py
domains/worker_chunk_text/src/processor/: chunk_text.py  metadata.py  metadata_contracts.py  stage_splitter.py
domains/worker_chunk_text/src/service/: __init__.py  worker_chunking_service.py
domains/worker_chunk_text/src/services/: __init__.py  chunk_manifest_factory.py  chunk_manifest_writer.py  chunk_text_processor.py  worker_chunk_text_service.py  worker_chunking_service.py
domains/worker_chunk_text/src/startup/: __init__.py  config_extractor.py  contracts.py  service_factory.py  storage_config_builder.py
domains/worker_chunk_text/src/worker_chunk_text/: __init__.py  __main__.py  app.py
domains/worker_embed_chunks/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
domains/worker_embed_chunks/app/: Dockerfile  pyproject.toml
domains/worker_embed_chunks/docs/: ARCHITECTURE.md
domains/worker_embed_chunks/src/: __init__.py  app.py
domains/worker_embed_chunks/src/configs/: __init__.py  configs.py  (+2 more)
domains/worker_index_elasticsearch/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
domains/worker_index_elasticsearch/docs/: ARCHITECTURE.md
domains/worker_index_weaviate/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
domains/worker_index_weaviate/app/: Dockerfile
domains/worker_index_weaviate/docs/: ARCHITECTURE.md
domains/worker_index_weaviate/src/: app.py
domains/worker_parse_document/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
domains/worker_parse_document/app/: Dockerfile
domains/worker_parse_document/docs/: ARCHITECTURE.md
domains/worker_parse_document/src/: app.py
domains/worker_scan/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint_readability_organization_review.md  pyproject.toml
domains/worker_scan/app/: Dockerfile
domains/worker_scan/docs/: ARCHITECTURE.md
domains/worker_scan/src/: app.py
libs/agent/platform/: README.md  pyproject.toml
libs/agent/runtime_config/: pyproject.toml
libs/agent/settings/: pyproject.toml
libs/ai_infra/: pyproject.toml
libs/pipeline-common/: AGENTS.md  pyproject.toml
(+821 files in other folders)
