[tool.poetry]
name = "governed-rag-foundation-root"
version = "0.1.0"
description = "Root Poetry environment for Development"
authors = ["Elwes Honorato"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
acryl-datahub = "*"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
