[project]
name = "governed-rag-foundation-root"
version = "0.1.0"
description = "Root Poetry environment for Development"
authors = [{ name = "Elwes Honorato" }]
requires-python = "==3.11.14"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.14"
acryl-datahub = "1.4.0.2"
requests = "2.32.5"
boto3 = "1.42.59"
pika = "1.3.2"
pyyaml = "6.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
