[project]
name = "governed-rag-foundation-root"
version = "0.1.0"
description = "Root Poetry environment for development"
authors = [{ name = "Elwes Honorato" }]
requires-python = "==3.11.14"
dependencies = [
  "acryl-datahub==1.4.0.2",
  "boto3==1.42.59",
  "pika==1.3.2",
  "pyyaml==6.0.3",
  "requests==2.32.5",
  "elasticsearch==8.17.2",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
