[project]
name = "agent-api"
version = "0.1.0"
description = "HTTP API for the agent platform"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "agent-platform @ ../../libs/agent/platform",
  "runtime @ ../../libs/agent/runtime_config",
]

[project.scripts]
agent-api = "agent_api.app:main"

[tool.poetry]
packages = [{ include = "agent_api", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
