[tool.poetry]
name = "agent-platform"
version = "0.1.0"
description = "Capability-oriented AI agent platform MVP"
authors = ["Governed RAG Foundation"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
