[tool.poetry]
name = "agent-platform"
version = "0.1.0"
description = "Capability-oriented AI agent platform MVP"
authors = ["Governed RAG Foundation"]
packages = [{ include = "agent_platform", from = "src" }]
include = [
  "src/agent_platform/config/**/*.yaml",
  "src/agent_platform/config/**/*.json",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ai-infra = { path = "../../libs/ai_infra", develop = true }

[tool.poetry.scripts]
agent-platform = "agent_platform.cli.agent_cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
