[tool.poetry]
name = "ai-backend"
version = "0.1.0"
description = "HTTP backend for the agent platform"
authors = ["Governed RAG Foundation"]
packages = [{ include = "ai_backend", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
agent-platform = { path = "../../libs/agent_platform", develop = true }

[tool.poetry.scripts]
ai-backend = "ai_backend.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
