[project]
name = "ai-backend"
version = "0.1.0"
description = "HTTP backend for the agent platform"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "agent-platform @ ../../libs/agent_platform",
  "runtime @ ../../libs/runtime",
]

[project.scripts]
ai-backend = "ai_backend.app:main"

[tool.poetry]
packages = [{ include = "ai_backend", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
