[tool.poetry]
name = "app-agent-api"
version = "0.1.0"
description = "HTTP API for the agent platform MVP"
authors = ["Governed RAG Foundation"]
packages = [{ include = "app_agent_api", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
agent-platform = { path = "../../libs/agent_platform", develop = true }

[tool.poetry.scripts]
agent-api = "app_agent_api.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
