[project]
name = "vector-ui"
version = "0.1.0"
description = "Standalone UI for querying Weaviate vectors"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.14"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
