[project]
name = "vector-ui"
version = "0.1.0"
description = "Standalone UI for querying Weaviate vectors"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "flask==3.1.3",
]

[project.scripts]
vector-ui = "vector_ui.app:main"

[tool.poetry]
packages = [{ include = "vector_ui", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
