[tool.poetry]
name = "worker-chunk-text"
version = "0.1.0"
description = "Pipeline worker worker_chunk_text"
authors = ["Governed RAG Foundation"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.14"
boto3 = "1.37.0"
pika = "1.3.2"
acryl-datahub = "1.4.0.2"
pyspark = "3.5.1"

[build-system]
requires = ["poetry-core==2.0.0"]
build-backend = "poetry.core.masonry.api"
