[project]
name = "worker-chunk-text"
version = "0.1.0"
description = "Pipeline worker worker_chunk_text"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "langchain-text-splitters==0.3.11",
  "pipeline-common @ ../../libs/pipeline-common",
]

[project.scripts]
worker-chunk-text = "worker_chunk_text.app:main"

[tool.poetry]
packages = [{ include = "worker_chunk_text", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
