[project]
name = "worker-embed-chunks"
version = "0.1.0"
description = "Pipeline worker worker_embed_chunks"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "pipeline-common @ ../../libs/pipeline-common",
]

[project.scripts]
worker-embed-chunks = "worker_embed_chunks.app:main"

[tool.poetry]
packages = [{ include = "worker_embed_chunks", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
