[project]
name = "worker-parse-document"
version = "0.1.0"
description = "Worker stage: raw -> processed"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "pipeline-common @ ../../libs/pipeline-common",
  "trafilatura==1.12.2",
]

[project.scripts]
worker-parse-document = "worker_parse_document.app:main"

[tool.poetry]
packages = [{ include = "worker_parse_document", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
