[tool.poetry]
name = "worker-scan"
version = "0.1.0"
description = "Worker stage: incoming -> raw"
authors = ["Governed RAG Foundation"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.37.0"
pika = "^1.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
