[project]
name = "worker-scan"
version = "0.1.0"
description = "Worker stage: incoming -> raw"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "pipeline-common @ ../../libs/pipeline-common",
]

[project.scripts]
worker-scan = "worker_scan.app:main"

[tool.poetry]
packages = [{ include = "worker_scan", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
