[project]
name = "ai-infra"
version = "0.1.0"
description = "Capability-oriented agent platform runtime primitives"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{ include = "ai_infra", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
