[project]
name = "pipeline-common"
version = "0.1.0"
description = "Shared helpers for pipeline workers"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = ">=3.11,<3.12"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
boto3 = "^1.37.0"
pika = "^1.3.2"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
