[project]
name = "pipeline-common"
version = "0.1.0"
description = "Shared helpers for pipeline workers"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "acryl-datahub==1.4.0.2",
  "boto3==1.42.57",
  "pika==1.3.2",
  "pyyaml==6.0.3",
  "requests==2.32.5",
]

[tool.poetry]
packages = [{ include = "pipeline_common", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
