[tool.poetry]
name = "worker-embed-chunks"
version = "0.1.0"
description = "Pipeline worker worker_embed_chunks"
authors = ["Governed RAG Foundation"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.37.0"
redis = "^5.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
