[project]
name = "agent-platform"
version = "0.1.0"
description = "Capability-oriented AI agent platform MVP"
authors = [{ name = "Governed RAG Foundation" }]
requires-python = "==3.11.14"
dependencies = [
  "ai-infra @ ../core",
  "agent-settings @ ../settings",
]

[tool.poetry]
packages = [{ include = "agent_platform", from = "src" }]
include = [
  "src/agent_platform/config/**/*.yaml",
  "src/agent_platform/config/**/*.json",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
